include/dss_capi.h

    /*
    Get the Name of the active Loadshape
    */
    DSS_CAPI_DLL char* LoadShapes_Get_Name(void);
    /*
    Set the active Loadshape by name
    */
    DSS_CAPI_DLL void LoadShapes_Set_Name(char* Value);
    /*
    Number of Loadshape objects currently defined in Loadshape collection
    */
    DSS_CAPI_DLL int32_t LoadShapes_Get_Count(void);
    /*
    Set the first loadshape active and return integer index of the loadshape. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t LoadShapes_Get_First(void);
    /*
    Advance active Loadshape to the next on in the collection. Returns 0 if no more loadshapes.
    */
    DSS_CAPI_DLL int32_t LoadShapes_Get_Next(void);
    /*
    Array of strings containing names of all Loadshape objects currently defined.
    */
    DSS_CAPI_DLL void LoadShapes_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as LoadShapes_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LoadShapes_Get_AllNames_GR(void);
    /*
    Get Number of points in active Loadshape.
    */
    DSS_CAPI_DLL int32_t LoadShapes_Get_Npts(void);
    /*
    Array of Doubles for the P multiplier in the Loadshape.
    */
    DSS_CAPI_DLL void LoadShapes_Get_Pmult(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as LoadShapes_Get_Pmult but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LoadShapes_Get_Pmult_GR(void);
    /*
    Array of doubles containing the Q multipliers.
    */
    DSS_CAPI_DLL void LoadShapes_Get_Qmult(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as LoadShapes_Get_Qmult but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LoadShapes_Get_Qmult_GR(void);
    /*
    Set number of points to allocate for active Loadshape.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Npts(int32_t Value);
    /*
    Array of doubles containing the P array for the Loadshape.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Pmult(double* ValuePtr, int32_t ValueCount);
    /*
    Array of doubles containing the Q multipliers.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Qmult(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LoadShapes_Normalize(void);
    /*
    Time array in hours correscponding to P and Q multipliers when the Interval=0.
    */
    DSS_CAPI_DLL void LoadShapes_Get_TimeArray(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as LoadShapes_Get_TimeArray but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LoadShapes_Get_TimeArray_GR(void);
    /*
    Time array in hours correscponding to P and Q multipliers when the Interval=0.
    */
    DSS_CAPI_DLL void LoadShapes_Set_TimeArray(double* ValuePtr, int32_t ValueCount);
    /*
    Fixed interval time value, hours
    */
    DSS_CAPI_DLL double LoadShapes_Get_HrInterval(void);
    /*
    Fixed Interval time value, in minutes
    */
    DSS_CAPI_DLL double LoadShapes_Get_MinInterval(void);
    DSS_CAPI_DLL double LoadShapes_Get_sInterval(void); // deprecated, see #24
    DSS_CAPI_DLL void LoadShapes_Set_Sinterval(double Value); // deprecated, see #24
    /*
    Fixed interval time value, hours.
    */
    DSS_CAPI_DLL void LoadShapes_Set_HrInterval(double Value);
    /*
    Fixed Interval time value, in minutes
    */
    DSS_CAPI_DLL void LoadShapes_Set_MinInterval(double Value);
    DSS_CAPI_DLL int32_t LoadShapes_New(char* Name);
    DSS_CAPI_DLL double LoadShapes_Get_PBase(void);
    /*
    Base for normalizing Q curve. If left at zero, the peak value is used.
    */
    DSS_CAPI_DLL double LoadShapes_Get_Qbase(void);
    DSS_CAPI_DLL void LoadShapes_Set_PBase(double Value);
    /*
    Base for normalizing Q curve. If left at zero, the peak value is used.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Qbase(double Value);
    /*
    T/F flag to let Loads know to use the actual value in the curve rather than use the value as a multiplier.
    */
    DSS_CAPI_DLL uint16_t LoadShapes_Get_UseActual(void);
    /*
    T/F flag to let Loads know to use the actual value in the curve rather than use the value as a multiplier.
    */
    DSS_CAPI_DLL void LoadShapes_Set_UseActual(uint16_t Value);
    DSS_CAPI_DLL int32_t LoadShapes_Get_idx(void);
    DSS_CAPI_DLL void LoadShapes_Set_idx(int32_t Value);